<resources>
    <string name="app_name">BeHappy</string>
    <string name="Btn_Login">Iniciar Sesión</string>
    <string name="hint_correo">  Correo</string>
    <string name="hint_Contra">  Contraseña</string>
    <string name="hint_Confrimar">  Confirmar Contraseña</string>
    <string name="btn_Crearcuenta">Crear Cuenta</string>
    <string name="strCrear">Crear Cuenta</string>
    <string name="hint_Usuario">  Usuario</string>
    <string name="hint_Contraseña">  Contraseña</string>
    <string name="btn_Crear">¿No tiene una cuenta? Cree una.</string>
    <string name="title_activity_menu">Activity_menu</string>
    <string name="StrInicio">Inicio</string>
    <string name="StrGaleria">Galeria</string>
    <string name="StrEvento">Evento</string>
    <string name="StrEventoDet">Ubicación del Evento</string>
    <string name="StrUbicacionEventoDet">Informacion de la ubicación del Evento</string>
    <string name="StrArtista">Artista</string>
    <string name="Tittle">Just Be Happy</string>
    <string name="strNombreArtista">Rafael Pérez</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transition_galeriadet">transicion_galeriadet</string>
    <string name="strTituloArte">La Noche Mágica</string>
    <string name="strLikeMeGusta">8 Me gusta</string>
    <string name="strPrecioArte">1,200</string>
    <string name="strMoneda">C$</string>

    <!-- Artista detalle -->



    <!-- Pantalla galería detalle -->
    <string name="strCategoriaGaleria">Arte en Oleo</string>
    <string name="strDescripcionGaleria">Nací en la capital de Nicaragua, mi pasión ha sido la pintura en Oleo, siendo mis favoritas las pinturas en oleo. Durante niño me inicié en la pintura de forma nata, luego fui perfeccionando mi técnica en escuelas profesionales. Tengo mas de 10 años de experiencia en pintura.</string>

    <!-- Pantalla evento -->
    <string name="strTituloEvento">Exposición Primavera en Oleo</string>
    <string name="strCategoriaEvento">Arte en Oleo</string>
    <string name="strUbicacionEvento">Palacio de la Cultura</string>
    <string name="strDireccionEvento">Distrito 1. Managua, Nicaragua</string>
    <string name="strSitioWebEvento">www.uni.edu.ni</string>
    <string name="strTelefonoEvento">22705126</string>
    <string name="strCategoriaArtista">Artista plastico</string>
    <string name="strPaisArtista">Nicaragua</string>
    <string name="strCiudad">Nicaragua</string>
    <string name="strAcercaDe">Acerca de mi</string>
    <!-- fin -->

    <string name="strDescripcionQuienSoy">Naci en la capital de Nicaragua, mi pasion ha sido la pintura en Oleo, siendo mi técnica en escuela profesionales. Tengo mas de 10 años de experiencia en pintura.</string>
    <string name="strCuentaTwitter">\@glenda</string>
    <string name="strGaleria">Galeria</string>


</resources>