<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment_galeriadetalle">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abGaleriaDet"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tam3">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolcolapse"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/Azul_Fondo">
            <ImageView
                android:id="@+id/imgdetallearte"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/img_arte3"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:fitsSystemWindows="true"
                android:transitionName="@string/transition_galeriadet">
            </ImageView>
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tbGaleriaDet"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margen2"
                android:theme="@style/Theme.ArteLista"
                app:layout_collapseMode="pin">
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/margen6">

            <TextView
                android:id="@+id/tvArtistaDet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/allan"
                android:paddingLeft="@dimen/margen8"
                android:paddingRight="@dimen/margen8"
                android:text="@string/strNombreArtista"
                android:textColor="@color/Azul_Fondo"
                android:textSize="@dimen/tamTexto4"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvCategoriaArtista"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/balthazar"
                android:paddingLeft="@dimen/margen8"
                android:paddingRight="@dimen/margen8"
                android:text="@string/strCategoriaGaleria"
                android:textColor="@color/black"
                android:textSize="@dimen/tamtexto2" />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/tam2"
                android:background="@color/Dark_Purple"/>

            <TextView
                android:id="@+id/tvArteDet1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/allan"
                android:paddingTop="@dimen/margen8"
                android:text="@string/strCategoriaGaleria"
                android:textColor="@color/Azul_Fondo"
                android:textSize="@dimen/tamTexto3"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDescripcionArte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/balthazar"
                android:paddingLeft="@dimen/tamTexto3"
                android:paddingTop="@dimen/tamTexto3"
                android:paddingRight="@dimen/tamTexto3"
                android:text="@string/strDescripcionGaleria"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/like_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:src="@drawable/ic_heart_vacio"
        app:layout_anchor="@+id/abGaleriaDet"
        app:layout_anchorGravity="bottom|end"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>